examples/errors/module_and_script_error.flx
import Modules.Data.MyFile

fun value() {
  1;
}

Modules.Data.MyFile.value();
